--- a/LibraryProject/LibraryProject.csproj
+++ b/LibraryProject/LibraryProject.csproj
@@ -124,6 +124,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Interfaces\IBookAble.cs" />
+    <Compile Include="Interfaces\IMagazineAble.cs" />
+    <Compile Include="Interfaces\INewspaperAble.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
