--- a/LibraryProject/LibraryProject.csproj
+++ b/LibraryProject/LibraryProject.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Extention Classes\BookExtention.cs" />
+    <Compile Include="Extention Classes\MagazineExtention.cs" />
     <Compile Include="Extention Classes\NewsPaperExtention.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Global.asax.cs">
@@ -183,7 +184,6 @@
     <Compile Include="Models\NewsPaper.cs" />
     <Compile Include="Models\PrintEdition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\SaveService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
