--- a/LibraryProject/LibraryProject.csproj
+++ b/LibraryProject/LibraryProject.csproj
@@ -171,6 +171,7 @@
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="SaveBooksToDB.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Extention Classes\BookExtention.cs" />
     <Compile Include="Extention Classes\MagazineExtention.cs" />
